// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App > Snapshots > renders default layout correctly 1`] = `
"MainContent
Notifications
Composer




































"
`;

exports[`App > Snapshots > renders screen reader layout correctly 1`] = `
"Notifications
Footer
MainContent
Composer"
`;

exports[`App > Snapshots > renders with dialogs visible 1`] = `
"MainContent
Notifications
DialogManager




































"
`;

exports[`App > should render ToolConfirmationQueue along with Composer when tool is confirming and experiment is on 1`] = `
"MainContent
Notifications
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ Action Required                                                                                               1 of 1 │
│                                                                                                                      │
│ ?  ls list directory                                                                                                 │
│                                                                                                                      │
│ ls                                                                                                                   │
│                                                                                                                      │
│ Allow execution of: 'ls'?                                                                                            │
│                                                                                                                      │
│ ● 1. Allow once                                                                                                      │
│   2. Allow for this session                                                                                          │
│   3. No, suggest changes (esc)                                                                                       │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
Composer






















"
`;
